--- a/public/error-500.html
+++ b/public/error-500.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,20 +11,43 @@
   <link href="/css/genie/style.css" rel="stylesheet">
   <link href="/css/genie/prism.css" rel="stylesheet" />
 </head>
-
 <body id="page-top" data-spy="scroll" data-target=".side-menu">
   <div class="container-fluid">
     <!-- Start: Header -->
     <div class="row hero-header" id="home">
-      <div class="col-md-7">
-        <h1 id="main-heading">Welcome!</h1>
-        <h3>It works! You have successfully created and started your Genie app. </h3>
-      </div>
-      <div class="col-md-5 hidden-xs">
-        <img src="img/genie/genie.png" class="rocket animated bounce" alt="Genie">
+      <div class="row">
+        <div class="col-md-7">
+          <h1 id="main-heading">500 Internal Server Error</h1>
+          <h2>
+            <code>
+<error_description/>
+            </code>
+          </h2>
+          <br>
+          <a href="/" class="btn btn-lg btn-red">Go Home</a>
+        </div>
+        <div class="col-md-5 hidden-xs">
+          <img src="/img/genie/genie-sad.png" class="rocket animated bounce" alt="Sad Genie">
+        </div>
       </div>
     </div>
     <!-- End: Header -->
+  </div>
+
+  <div class="container-fluid" id="error-console">
+    <div class="row me-row content-ct">
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+          <pre>
+            <code class="language-julia">
+<error_message/>
+            </code>
+          </pre>
+        </div>
+        <div class="col-md-1"></div>
+      </div>
+    </div>
   </div>
 
   <!-- Start: Help -->
@@ -73,10 +95,8 @@
 
   <script src="/js/genie/jquery.min.js"></script>
   <script src="/js/genie/bootstrap.min.js"></script>
-  <script src="/js/genie/jquery.easing.min.js"></script>
-  <script src="/js/genie/scrolling-nav.js"></script>
-  <script async defer src="https://buttons.github.io/buttons.js"></script>
+  <script src="/js/genie/ansi_up.js"></script>
+  <script src="/js/genie/static.js"></script>
   <script src="/js/genie/prism.js"></script>
 </body>
-
 </html>
